[gd_scene load_steps=30 format=4 uid="uid://dng51u3djyirw"]

[ext_resource type="Texture2D" uid="uid://dqnm6a4rq3d7a" path="res://assets/Spritesheet_UI_Flat.png" id="1_mrqgh"]
[ext_resource type="Script" uid="uid://cfagu22h8374m" path="res://inventory.gd" id="1_w3tfj"]
[ext_resource type="Texture2D" uid="uid://5tjvcfhwpuly" path="res://assets/Spritesheet_UI_Flat_Animated.png" id="2_dw5ng"]
[ext_resource type="Texture2D" uid="uid://b0ltnn03nmq1e" path="res://assets/crystal_item_anim_strip_6.png" id="4_dw5ng"]
[ext_resource type="Texture2D" uid="uid://br3a1n72p62u2" path="res://assets/spr_coin_roj.png" id="5_0xmy5"]
[ext_resource type="Texture2D" uid="uid://c5byxj3vi32e8" path="res://assets/mapa1.png" id="6_ormsd"]
[ext_resource type="Texture2D" uid="uid://1vwgw2u1jfhc" path="res://assets/Inventory2.png" id="6_qjyhv"]
[ext_resource type="Texture2D" uid="uid://dhewtspipq1c5" path="res://assets/mapa2.png" id="7_ho8i8"]
[ext_resource type="Texture2D" uid="uid://dg0cqixxx7nex" path="res://assets/mapa3.png" id="8_udyo3"]
[ext_resource type="Texture2D" uid="uid://cov06gyap7py2" path="res://assets/redfutuisticlock.png" id="9_ho8i8"]
[ext_resource type="Texture2D" uid="uid://dgns1770cp1tb" path="res://assets/mapa4.png" id="10_2pjyi"]
[ext_resource type="Texture2D" uid="uid://n88sfk55fpc6" path="res://assets/mapa5.png" id="11_dhhmk"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0xmy5"]
texture = ExtResource("1_mrqgh")
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
31:2/0 = 0
32:2/0 = 0
33:2/0 = 0
34:2/0 = 0
35:2/0 = 0
36:2/0 = 0
37:2/0 = 0
38:2/0 = 0
39:2/0 = 0
40:2/0 = 0
41:2/0 = 0
42:2/0 = 0
43:2/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
31:3/0 = 0
32:3/0 = 0
33:3/0 = 0
34:3/0 = 0
35:3/0 = 0
36:3/0 = 0
37:3/0 = 0
38:3/0 = 0
39:3/0 = 0
40:3/0 = 0
41:3/0 = 0
42:3/0 = 0
43:3/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
30:4/0 = 0
31:4/0 = 0
32:4/0 = 0
33:4/0 = 0
34:4/0 = 0
35:4/0 = 0
36:4/0 = 0
37:4/0 = 0
38:4/0 = 0
39:4/0 = 0
40:4/0 = 0
41:4/0 = 0
42:4/0 = 0
43:4/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
30:5/0 = 0
31:5/0 = 0
32:5/0 = 0
33:5/0 = 0
34:5/0 = 0
35:5/0 = 0
36:5/0 = 0
37:5/0 = 0
38:5/0 = 0
39:5/0 = 0
40:5/0 = 0
41:5/0 = 0
42:5/0 = 0
43:5/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
30:6/0 = 0
31:6/0 = 0
32:6/0 = 0
33:6/0 = 0
34:6/0 = 0
35:6/0 = 0
36:6/0 = 0
37:6/0 = 0
38:6/0 = 0
39:6/0 = 0
40:6/0 = 0
41:6/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
30:7/0 = 0
31:7/0 = 0
32:7/0 = 0
33:7/0 = 0
34:7/0 = 0
35:7/0 = 0
36:7/0 = 0
37:7/0 = 0
38:7/0 = 0
39:7/0 = 0
40:7/0 = 0
41:7/0 = 0
8:8/0 = 0
9:8/0 = 0
14:8/0 = 0
15:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
30:8/0 = 0
31:8/0 = 0
32:8/0 = 0
33:8/0 = 0
34:8/0 = 0
35:8/0 = 0
36:8/0 = 0
37:8/0 = 0
38:8/0 = 0
39:8/0 = 0
40:8/0 = 0
41:8/0 = 0
8:9/0 = 0
9:9/0 = 0
14:9/0 = 0
15:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
26:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0
30:9/0 = 0
31:9/0 = 0
32:9/0 = 0
33:9/0 = 0
34:9/0 = 0
35:9/0 = 0
36:9/0 = 0
37:9/0 = 0
38:9/0 = 0
39:9/0 = 0
40:9/0 = 0
41:9/0 = 0
8:10/0 = 0
9:10/0 = 0
14:10/0 = 0
15:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
25:10/0 = 0
26:10/0 = 0
27:10/0 = 0
28:10/0 = 0
29:10/0 = 0
30:10/0 = 0
31:10/0 = 0
32:10/0 = 0
33:10/0 = 0
34:10/0 = 0
35:10/0 = 0
36:10/0 = 0
37:10/0 = 0
38:10/0 = 0
39:10/0 = 0
40:10/0 = 0
41:10/0 = 0
8:11/0 = 0
9:11/0 = 0
14:11/0 = 0
15:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
26:11/0 = 0
27:11/0 = 0
28:11/0 = 0
29:11/0 = 0
30:11/0 = 0
31:11/0 = 0
32:11/0 = 0
33:11/0 = 0
34:11/0 = 0
35:11/0 = 0
36:11/0 = 0
37:11/0 = 0
38:11/0 = 0
39:11/0 = 0
40:11/0 = 0
41:11/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
26:12/0 = 0
27:12/0 = 0
28:12/0 = 0
29:12/0 = 0
30:12/0 = 0
31:12/0 = 0
32:12/0 = 0
33:12/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
26:13/0 = 0
27:13/0 = 0
28:13/0 = 0
29:13/0 = 0
30:13/0 = 0
31:13/0 = 0
32:13/0 = 0
33:13/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
25:14/0 = 0
26:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
32:14/0 = 0
33:14/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0
24:15/0 = 0
25:15/0 = 0
26:15/0 = 0
27:15/0 = 0
28:15/0 = 0
29:15/0 = 0
32:15/0 = 0
33:15/0 = 0
2:10/0 = 0
2:8/0 = 0
2:6/0 = 0
2:2/size_in_atlas = Vector2i(6, 4)
2:2/0 = 0
2:7/0 = 0
2:9/0 = 0
2:11/0 = 0
2:12/0 = 0
2:13/0 = 0
3:6/0 = 0
3:7/0 = 0
3:8/0 = 0
3:9/0 = 0
3:10/0 = 0
3:11/0 = 0
3:12/0 = 0
3:13/0 = 0
4:6/0 = 0
4:7/0 = 0
5:6/0 = 0
5:7/0 = 0

[sub_resource type="TileSet" id="TileSet_ho8i8"]
sources/0 = SubResource("TileSetAtlasSource_0xmy5")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_udyo3"]
texture = ExtResource("1_mrqgh")
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
31:2/0 = 0
32:2/0 = 0
33:2/0 = 0
34:2/0 = 0
35:2/0 = 0
36:2/0 = 0
37:2/0 = 0
38:2/0 = 0
39:2/0 = 0
40:2/0 = 0
41:2/0 = 0
42:2/0 = 0
43:2/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
31:3/0 = 0
32:3/0 = 0
33:3/0 = 0
34:3/0 = 0
35:3/0 = 0
36:3/0 = 0
37:3/0 = 0
38:3/0 = 0
39:3/0 = 0
40:3/0 = 0
41:3/0 = 0
42:3/0 = 0
43:3/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
30:4/0 = 0
31:4/0 = 0
32:4/0 = 0
33:4/0 = 0
34:4/0 = 0
35:4/0 = 0
36:4/0 = 0
37:4/0 = 0
38:4/0 = 0
39:4/0 = 0
40:4/0 = 0
41:4/0 = 0
42:4/0 = 0
43:4/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
30:5/0 = 0
31:5/0 = 0
32:5/0 = 0
33:5/0 = 0
34:5/0 = 0
35:5/0 = 0
36:5/0 = 0
37:5/0 = 0
38:5/0 = 0
39:5/0 = 0
40:5/0 = 0
41:5/0 = 0
42:5/0 = 0
43:5/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
30:6/0 = 0
31:6/0 = 0
32:6/0 = 0
33:6/0 = 0
34:6/0 = 0
35:6/0 = 0
36:6/0 = 0
37:6/0 = 0
38:6/0 = 0
39:6/0 = 0
40:6/0 = 0
41:6/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
30:7/0 = 0
31:7/0 = 0
32:7/0 = 0
33:7/0 = 0
34:7/0 = 0
35:7/0 = 0
36:7/0 = 0
37:7/0 = 0
38:7/0 = 0
39:7/0 = 0
40:7/0 = 0
41:7/0 = 0
2:8/0 = 0
3:8/0 = 0
8:8/0 = 0
9:8/0 = 0
14:8/0 = 0
15:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
30:8/0 = 0
31:8/0 = 0
32:8/0 = 0
33:8/0 = 0
34:8/0 = 0
35:8/0 = 0
36:8/0 = 0
37:8/0 = 0
38:8/0 = 0
39:8/0 = 0
40:8/0 = 0
41:8/0 = 0
2:9/0 = 0
3:9/0 = 0
8:9/0 = 0
9:9/0 = 0
14:9/0 = 0
15:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
26:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0
30:9/0 = 0
31:9/0 = 0
32:9/0 = 0
33:9/0 = 0
34:9/0 = 0
35:9/0 = 0
36:9/0 = 0
37:9/0 = 0
38:9/0 = 0
39:9/0 = 0
40:9/0 = 0
41:9/0 = 0
8:10/0 = 0
9:10/0 = 0
14:10/0 = 0
15:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
25:10/0 = 0
26:10/0 = 0
27:10/0 = 0
28:10/0 = 0
29:10/0 = 0
30:10/0 = 0
31:10/0 = 0
32:10/0 = 0
33:10/0 = 0
34:10/0 = 0
35:10/0 = 0
36:10/0 = 0
37:10/0 = 0
38:10/0 = 0
39:10/0 = 0
40:10/0 = 0
41:10/0 = 0
8:11/0 = 0
9:11/0 = 0
14:11/0 = 0
15:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
26:11/0 = 0
27:11/0 = 0
28:11/0 = 0
29:11/0 = 0
30:11/0 = 0
31:11/0 = 0
32:11/0 = 0
33:11/0 = 0
34:11/0 = 0
35:11/0 = 0
36:11/0 = 0
37:11/0 = 0
38:11/0 = 0
39:11/0 = 0
40:11/0 = 0
41:11/0 = 0
2:12/0 = 0
3:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
26:12/0 = 0
27:12/0 = 0
28:12/0 = 0
29:12/0 = 0
30:12/0 = 0
31:12/0 = 0
32:12/0 = 0
33:12/0 = 0
2:13/0 = 0
3:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
26:13/0 = 0
27:13/0 = 0
28:13/0 = 0
29:13/0 = 0
30:13/0 = 0
31:13/0 = 0
32:13/0 = 0
33:13/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
25:14/0 = 0
26:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
32:14/0 = 0
33:14/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0
24:15/0 = 0
25:15/0 = 0
26:15/0 = 0
27:15/0 = 0
28:15/0 = 0
29:15/0 = 0
32:15/0 = 0
33:15/0 = 0
2:10/0 = 0
2:11/0 = 0
3:10/0 = 0
3:11/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dhhmk"]
texture = ExtResource("8_udyo3")
28:33/0 = 0
27:33/0 = 0
26:32/0 = 0
25:32/0 = 0
24:31/0 = 0
25:30/0 = 0
26:30/0 = 0
27:30/0 = 0
28:30/0 = 0
29:29/0 = 0
30:29/0 = 0
31:29/0 = 0
32:29/0 = 0
32:30/0 = 0
32:31/0 = 0
33:32/0 = 0
33:33/0 = 0

[sub_resource type="TileSet" id="TileSet_a8ig1"]
sources/0 = SubResource("TileSetAtlasSource_udyo3")
sources/1 = SubResource("TileSetAtlasSource_dhhmk")

[sub_resource type="AtlasTexture" id="AtlasTexture_2pjyi"]
atlas = ExtResource("2_dw5ng")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhhmk"]
atlas = ExtResource("2_dw5ng")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4epum"]
atlas = ExtResource("2_dw5ng")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kucie"]
atlas = ExtResource("2_dw5ng")
region = Rect2(96, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_8xn2g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pjyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhhmk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4epum")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kucie")
}],
"loop": true,
"name": &"selection ",
"speed": 5.0
}]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4fgxc"]
texture = ExtResource("1_mrqgh")
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
31:2/0 = 0
32:2/0 = 0
33:2/0 = 0
34:2/0 = 0
35:2/0 = 0
36:2/0 = 0
37:2/0 = 0
38:2/0 = 0
39:2/0 = 0
40:2/0 = 0
41:2/0 = 0
42:2/0 = 0
43:2/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
31:3/0 = 0
32:3/0 = 0
33:3/0 = 0
34:3/0 = 0
35:3/0 = 0
36:3/0 = 0
37:3/0 = 0
38:3/0 = 0
39:3/0 = 0
40:3/0 = 0
41:3/0 = 0
42:3/0 = 0
43:3/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
30:4/0 = 0
31:4/0 = 0
32:4/0 = 0
33:4/0 = 0
34:4/0 = 0
35:4/0 = 0
36:4/0 = 0
37:4/0 = 0
38:4/0 = 0
39:4/0 = 0
40:4/0 = 0
41:4/0 = 0
42:4/0 = 0
43:4/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
30:5/0 = 0
31:5/0 = 0
32:5/0 = 0
33:5/0 = 0
34:5/0 = 0
35:5/0 = 0
36:5/0 = 0
37:5/0 = 0
38:5/0 = 0
39:5/0 = 0
40:5/0 = 0
41:5/0 = 0
42:5/0 = 0
43:5/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
30:6/0 = 0
31:6/0 = 0
32:6/0 = 0
33:6/0 = 0
34:6/0 = 0
35:6/0 = 0
36:6/0 = 0
37:6/0 = 0
38:6/0 = 0
39:6/0 = 0
40:6/0 = 0
41:6/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
30:7/0 = 0
31:7/0 = 0
32:7/0 = 0
33:7/0 = 0
34:7/0 = 0
35:7/0 = 0
36:7/0 = 0
37:7/0 = 0
38:7/0 = 0
39:7/0 = 0
40:7/0 = 0
41:7/0 = 0
2:8/0 = 0
3:8/0 = 0
8:8/0 = 0
9:8/0 = 0
14:8/0 = 0
15:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
30:8/0 = 0
31:8/0 = 0
32:8/0 = 0
33:8/0 = 0
34:8/0 = 0
35:8/0 = 0
36:8/0 = 0
37:8/0 = 0
38:8/0 = 0
39:8/0 = 0
40:8/0 = 0
41:8/0 = 0
2:9/0 = 0
3:9/0 = 0
8:9/0 = 0
9:9/0 = 0
14:9/0 = 0
15:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
26:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0
30:9/0 = 0
31:9/0 = 0
32:9/0 = 0
33:9/0 = 0
34:9/0 = 0
35:9/0 = 0
36:9/0 = 0
37:9/0 = 0
38:9/0 = 0
39:9/0 = 0
40:9/0 = 0
41:9/0 = 0
2:10/0 = 0
3:10/0 = 0
8:10/0 = 0
9:10/0 = 0
14:10/0 = 0
15:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
25:10/0 = 0
26:10/0 = 0
27:10/0 = 0
28:10/0 = 0
29:10/0 = 0
30:10/0 = 0
31:10/0 = 0
32:10/0 = 0
33:10/0 = 0
34:10/0 = 0
35:10/0 = 0
36:10/0 = 0
37:10/0 = 0
38:10/0 = 0
39:10/0 = 0
2:11/0 = 0
3:11/0 = 0
8:11/0 = 0
9:11/0 = 0
14:11/0 = 0
15:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
26:11/0 = 0
27:11/0 = 0
28:11/0 = 0
29:11/0 = 0
30:11/0 = 0
31:11/0 = 0
32:11/0 = 0
33:11/0 = 0
34:11/0 = 0
35:11/0 = 0
36:11/0 = 0
37:11/0 = 0
38:11/0 = 0
39:11/0 = 0
2:12/0 = 0
3:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
26:12/0 = 0
27:12/0 = 0
28:12/0 = 0
29:12/0 = 0
30:12/0 = 0
31:12/0 = 0
32:12/0 = 0
33:12/0 = 0
2:13/0 = 0
3:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
26:13/0 = 0
27:13/0 = 0
28:13/0 = 0
29:13/0 = 0
30:13/0 = 0
31:13/0 = 0
32:13/0 = 0
33:13/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
25:14/0 = 0
26:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
32:14/0 = 0
33:14/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0
24:15/0 = 0
25:15/0 = 0
26:15/0 = 0
27:15/0 = 0
28:15/0 = 0
29:15/0 = 0
32:15/0 = 0
33:15/0 = 0
40:10/size_in_atlas = Vector2i(2, 2)
40:10/0 = 0

[sub_resource type="TileSet" id="TileSet_mckt2"]
sources/0 = SubResource("TileSetAtlasSource_4fgxc")

[sub_resource type="CanvasTexture" id="CanvasTexture_q4tpj"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ho8i8"]
texture = ExtResource("4_dw5ng")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0

[sub_resource type="TileSet" id="TileSet_udyo3"]
sources/0 = SubResource("TileSetAtlasSource_ho8i8")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_a8ig1"]
texture = ExtResource("5_0xmy5")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0

[sub_resource type="TileSet" id="TileSet_2pjyi"]
sources/0 = SubResource("TileSetAtlasSource_a8ig1")

[node name="inventoryui" type="Sprite2D"]
script = ExtResource("1_w3tfj")

[node name="frame" type="TileMapLayer" parent="."]
texture_filter = 1
position = Vector2(-707, -241)
scale = Vector2(3.8864, 3.8864)
tile_map_data = PackedByteArray("AAATAAgAAAACAAIAAAASAAgAAAACAAgAAAA=")
tile_set = SubResource("TileSet_ho8i8")

[node name="insideframe" type="TileMapLayer" parent="."]
texture_filter = 1
position = Vector2(-248, -149)
scale = Vector2(1.4738, 1.4738)
tile_map_data = PackedByteArray("AAAZABMAAAACAAoAAAAZABQAAAACAAsAAAAaABMAAAADAAoAAAAaABQAAAADAAsAAAAcABMAAAACAAoAAAAcABQAAAACAAsAAAAdABMAAAADAAoAAAAdABQAAAADAAsAAAAfABMAAAACAAoAAAAfABQAAAACAAsAAAAgABMAAAADAAoAAAAgABQAAAADAAsAAAAiABMAAAACAAoAAAAiABQAAAACAAsAAAAjABMAAAADAAoAAAAjABQAAAADAAsAAAAlABMAAAACAAoAAAAlABQAAAACAAsAAAAmABMAAAADAAoAAAAmABQAAAADAAsAAAAcABAAAAACAAoAAAAcABEAAAACAAsAAAAdABAAAAADAAoAAAAdABEAAAADAAsAAAAfABAAAAACAAoAAAAfABEAAAACAAsAAAAgABAAAAADAAoAAAAgABEAAAADAAsAAAAiABAAAAACAAoAAAAiABEAAAACAAsAAAAjABAAAAADAAoAAAAjABEAAAADAAsAAAAlABAAAAACAAoAAAAlABEAAAACAAsAAAAmABAAAAADAAoAAAAmABEAAAADAAsAAAAZABAAAAACAAoAAAAZABEAAAACAAsAAAAaABAAAAADAAoAAAAaABEAAAADAAsAAAA=")
tile_set = SubResource("TileSet_a8ig1")

[node name="selection" type="AnimatedSprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(374, 246)
scale = Vector2(2.11247, 2.11247)
sprite_frames = SubResource("SpriteFrames_8xn2g")
animation = &"selection "
autoplay = "selection "
frame_progress = 0.501371

[node name="XBtn" type="TileMapLayer" parent="."]
texture_filter = 1
position = Vector2(-221, -52)
scale = Vector2(1.32939, 1.32939)
tile_map_data = PackedByteArray("AAApAAsAAAAoAAoAAAA=")
tile_set = SubResource("TileSet_mckt2")

[node name="xbutton" type="TouchScreenButton" parent="XBtn"]
z_index = -99
position = Vector2(654.435, 176.021)
scale = Vector2(18.0534, 15.7967)
texture_normal = SubResource("CanvasTexture_q4tpj")

[node name="Inventory2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(506, 195)
scale = Vector2(0.123747, 0.123747)
texture = ExtResource("6_qjyhv")

[node name="gold_gem_counter" type="Label" parent="."]
texture_filter = 1
offset_left = 513.0
offset_top = 303.0
offset_right = 553.0
offset_bottom = 326.0
scale = Vector2(0.732531, 0.732531)
text = "0"

[node name="violet_gem_counter" type="Label" parent="."]
texture_filter = 1
offset_left = 583.0
offset_top = 303.0
offset_right = 623.0
offset_bottom = 326.0
scale = Vector2(0.732531, 0.732531)
text = "0"

[node name="red_gem_counter" type="Label" parent="."]
texture_filter = 1
offset_left = 654.0
offset_top = 303.0
offset_right = 694.0
offset_bottom = 326.0
scale = Vector2(0.732531, 0.732531)
text = "0"

[node name="blue_gem_counter" type="Label" parent="."]
texture_filter = 1
offset_left = 441.0
offset_top = 303.0
offset_right = 481.0
offset_bottom = 352.0
scale = Vector2(0.732531, 0.732531)
text = "0
"

[node name="green_gem_counter" type="Label" parent="."]
offset_left = 371.0
offset_top = 303.0
offset_right = 411.0
offset_bottom = 352.0
scale = Vector2(0.732531, 0.732531)
text = "0
"

[node name="LblGreenGem" type="Label" parent="."]
texture_filter = 1
offset_left = 340.0
offset_top = 348.0
offset_right = 428.0
offset_bottom = 397.0
scale = Vector2(0.578209, 0.578209)
text = "Green Gem"

[node name="LblGoldGem" type="Label" parent="."]
texture_filter = 1
offset_left = 485.0
offset_top = 348.0
offset_right = 562.0
offset_bottom = 371.0
scale = Vector2(0.578209, 0.578209)
text = "Gold Gem"

[node name="LblVioletGem" type="Label" parent="."]
texture_filter = 1
offset_left = 553.0
offset_top = 348.0
offset_right = 638.0
offset_bottom = 371.0
scale = Vector2(0.578209, 0.578209)
text = "Violet Gem"

[node name="LblRedGem" type="Label" parent="."]
texture_filter = 1
offset_left = 628.0
offset_top = 347.0
offset_right = 703.0
offset_bottom = 370.0
scale = Vector2(0.578209, 0.578209)
text = "Red Gem"

[node name="LblBlueGem" type="Label" parent="."]
texture_filter = 1
offset_left = 415.0
offset_top = 348.0
offset_right = 490.0
offset_bottom = 371.0
scale = Vector2(0.578209, 0.578209)
text = "Blue Gem"

[node name="Map1" type="Label" parent="."]
texture_filter = 1
offset_left = 351.0
offset_top = 274.0
offset_right = 426.0
offset_bottom = 323.0
scale = Vector2(0.578209, 0.578209)
text = "Map 1
"

[node name="Map2" type="Label" parent="."]
texture_filter = 1
offset_left = 422.0
offset_top = 276.0
offset_right = 497.0
offset_bottom = 377.0
scale = Vector2(0.578209, 0.578209)
text = "Map 2


"

[node name="Map3" type="Label" parent="."]
texture_filter = 1
offset_left = 494.0
offset_top = 276.0
offset_right = 569.0
offset_bottom = 325.0
scale = Vector2(0.578209, 0.578209)
text = "Map 3
"

[node name="Map4" type="Label" parent="."]
texture_filter = 1
offset_left = 564.0
offset_top = 276.0
offset_right = 639.0
offset_bottom = 299.0
scale = Vector2(0.578209, 0.578209)
text = "Map 4
"

[node name="Map5" type="Label" parent="."]
texture_filter = 1
offset_left = 636.0
offset_top = 276.0
offset_right = 711.0
offset_bottom = 299.0
scale = Vector2(0.578209, 0.578209)
text = "Map 5"

[node name="bluegem" type="TileMapLayer" parent="."]
texture_filter = 1
position = Vector2(-134, -98)
scale = Vector2(1.29335, 1.29335)
tile_map_data = PackedByteArray("AAAbABQAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_udyo3")

[node name="greengem" type="TileMapLayer" parent="."]
modulate = Color(0, 1, 0.286275, 1)
texture_filter = 1
position = Vector2(-321, -185)
scale = Vector2(1.55801, 1.55801)
tile_map_data = PackedByteArray("AAAbABQAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_udyo3")

[node name="goldgem" type="TileMapLayer" parent="."]
modulate = Color(1, 0.952941, 0.0509804, 1)
texture_filter = 1
position = Vector2(-177, -184)
scale = Vector2(1.55801, 1.55801)
tile_map_data = PackedByteArray("AAAbABQAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_udyo3")

[node name="violetgem" type="TileMapLayer" parent="."]
modulate = Color(0.890196, 0, 1, 1)
texture_filter = 1
position = Vector2(-109, -184)
scale = Vector2(1.55801, 1.55801)
tile_map_data = PackedByteArray("AAAbABQAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_udyo3")

[node name="redgem" type="TileMapLayer" parent="."]
texture_filter = 1
position = Vector2(0, -4)
tile_map_data = PackedByteArray("AAAoABQAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_2pjyi")

[node name="Map_0" type="Sprite2D" parent="."]
modulate = Color(0.4, 0.4, 0.4, 1)
position = Vector2(364, 252)
scale = Vector2(0.0328141, 0.0328141)
texture = ExtResource("10_2pjyi")

[node name="Map_1" type="Sprite2D" parent="."]
modulate = Color(0.4, 0.4, 0.4, 1)
position = Vector2(435, 252)
scale = Vector2(0.0327169, 0.0327169)
texture = ExtResource("6_ormsd")

[node name="Map_2" type="Sprite2D" parent="."]
modulate = Color(0.4, 0.4, 0.4, 1)
position = Vector2(507, 251)
scale = Vector2(0.0317908, 0.0317908)
texture = ExtResource("7_ho8i8")

[node name="Map_3" type="Sprite2D" parent="."]
modulate = Color(0.4, 0.4, 0.4, 1)
position = Vector2(578, 252)
scale = Vector2(0.0345575, 0.0345575)
texture = ExtResource("8_udyo3")

[node name="Map_4" type="Sprite2D" parent="."]
modulate = Color(0.4, 0.4, 0.4, 1)
position = Vector2(648, 251)
scale = Vector2(0.0282428, 0.0282428)
texture = ExtResource("11_dhhmk")

[node name="Redfutuisticlock1" type="Sprite2D" parent="."]
position = Vector2(435, 253)
scale = Vector2(0.0528034, 0.0528034)
texture = ExtResource("9_ho8i8")

[node name="Redfutuisticlock2" type="Sprite2D" parent="."]
position = Vector2(507, 254)
scale = Vector2(0.0550943, 0.0550943)
texture = ExtResource("9_ho8i8")

[node name="Redfutuisticlock3" type="Sprite2D" parent="."]
position = Vector2(578, 253)
scale = Vector2(0.0549141, 0.0549141)
texture = ExtResource("9_ho8i8")

[node name="Redfutuisticlock4" type="Sprite2D" parent="."]
position = Vector2(649, 252)
scale = Vector2(0.0528034, 0.0528034)
texture = ExtResource("9_ho8i8")

[node name="Redfutuisticlock0" type="Sprite2D" parent="."]
position = Vector2(364, 253)
scale = Vector2(0.0528034, 0.0528034)
texture = ExtResource("9_ho8i8")

[connection signal="pressed" from="XBtn/xbutton" to="." method="_on_xbutton_pressed"]
